# diod

./: .gitignore  .mergify.yml  .travis.yml  AUTHORS  ChangeLog  DISCLAIMER.LLNS  INSTALL  MAINTAINERS.md  META  Makefile.am  Makefile.in  NEWS  NEWS.md  OSX-TODO  README  README.md  autogen.sh  configure  configure.ac  diod.spec  diod.spec.in  protocol.md
diod/: Makefile.am  Makefile.in  diod.8.in  diod.c  diod_dir.h  exp.c  exp.h  fid.c  fid.h  ioctx.c  ioctx.h  ops.c  ops.h  user.c  user.h  xattr.c  xattr.h
diodctl/: Makefile.am  Makefile.in  diodctl.8.in  diodctl.c  ops.c  ops.h  serv.c  serv.h
diodmount/: Makefile.am  Makefile.in  auth.c  auth.h  ctl.c  ctl.h  diodmount.8.in  diodmount.c  opt.c  opt.h  util.c  util.h
libdiod/: Makefile.am  Makefile.in  diod_auth.c  diod_auth.h  diod_conf.c  diod_conf.h  diod_log.c  diod_log.h  diod_pthread.h  diod_rdma.c  diod_rdma.h  diod_sock.c  diod_sock.h  diod_trans.c  diod_trans.h  diod_upool.c  diod_upool.h
libixp/: LICENSE  Makefile.am  Makefile.in  README  client.c  convert.c  error.c  ixp.h  ixp_local.h  ixp_srvutil.h  ixpc.c  map.c  message.c  request.c  rpc.c  server.c  socket.c  srv_util.c  thread.c  timer.c  transport.c  util.c
libnpfs/: 9p.h  AUTHORS  Makefile.am  Makefile.in  conn.c  ctl.c  error.c  fcall.c  fdtrans.c  fidpool.c  file.c  fmt.c  np.c  npfile.h  npfs.h  npfsimpl.h  npstring.c  pipesrv.c  rdmatrans.c  srv.c  syn.c  trans.c  user-freebsd.c  user-stub.c  user.c  xpthread.h
man/: 9p-aread.5.in  9p-attach.5.in  9p-clunk.5.in  9p-error.5.in  9p-flock.5.in  9p-flush.5.in  9p-fsync.5.in  9p-getattr.5.in  9p-getlock.5.in  9p-intro.5.in  9p-lcreate.5.in  9p-lerror.5.in  9p-link.5.in  9p-lock.5.in  9p-lopen.5.in  9p-mkdir.5.in  9p-mknod.5.in  9p-open.5.in  9p-read.5.in  9p-readdir.5.in  9p-readlink.5.in  9p-remove.5.in  9p-rename.5.in  9p-setattr.5.in  9p-stat.5.in  9p-statfs.5.in  9p-symlink.5.in  9p-version.5.in  9p-walk.5.in  Makefile.am  Makefile.in  diod.8.in  diod.conf.5.in  diodcli.8.in  diodctl.8.in  diodctl.conf.5.in  diodmount.8.in  dtop.8.in  mount.diod.8.in
scripts/: Makefile.am  Makefile.in  auto.diod  auto.diod.in  auto.g  check-root.sh  check-valgrind.sh  debbuild.sh  diod.init.in  diod.service.in  diodctl.init.in  install-deps-deb.sh  relnotes.sh
src/: Makefile.am  Makefile.in  diod.c  diod_conf.c  diod_conf.h  diod_ctl.c  diod_log.c  diod_ops.c  diod_ops.h  diod_sock.c  diod_sock.h  diod_trans.c  diod_trans.h  diod_upool.c  diod_upool.h
src/cmd/: Makefile.am  diod.c  diodcat.c  diodcli.c  dioddate.c  diodload.c  diodls.c  diodmount.c  diodshowmount.c  dtop.c  mount.diod.c  opt.c  opt.h  sample.c  sample.h
src/daemon/: Makefile.am  diod.c  exp.c  fid.c  ioctx.c  ioctx.h  ops.c  xattr.c
src/libdiod/: Makefile.am  diod_auth.c  diod_auth.h  diod_conf.c  diod_conf.h  diod_exp.c  diod_exp.h  diod_fid.c  diod_fid.h  diod_ioctx.c  diod_ioctx.h  diod_log.c  diod_log.h  diod_ops.c  diod_ops.h  diod_rdma.c  diod_rdma.h  diod_sock.c  diod_sock.h  diod_xattr.c  diod_xattr.h
src/liblsd/: Makefile.am  error.c  hash.c  hash.h  hostlist.c  hostlist.h  thread.h
src/libnpclient/: Makefile.am  chmod.c  fid.c  fsys.c  lock.c  mkdir.c  mount.c  mtfsys.c  npcimpl.h  npclient.h  open.c  pool.c  read.c  readdir.c  remove.c  rename.c  stat.c  walk.c  write.c  xattr.c
src/libnpfs/: 9p.h  COPYING  Makefile.am  conn.c  ctl.c  error.c  fcall.c  fdtrans.c  fidpool.c  fmt.c  ganesha-syscalls.h  np.c  npfs.h  npfsimpl.h  npstring.c  protocol.h  rdmatrans.c  srv.c  trans.c  types.h  user-freebsd.c  user-linux.c  user.c  xpthread.h
src/libtap/: Makefile.am
src/libtest/: Makefile.am  server.c  server.h  state.c  state.h  thread.c  thread.h
t/: Makefile.am  aggregate-results.sh  sharness.sh  t0000-sharness.t  t0001-basic-runasuser.t  t0002-basic-allsquash.t  t0003-basic-multiuser.t  t0004-npclient-basic.t  t0005-npclient-xattr.t  t0006-npclient-issues.t  t0010-v9fs-runasuser.t  t0011-v9fs-allsquash.t  t0012-v9fs-multiuser.t  t0013-v9fs-acl.t  t0020-dbench.t  t0021-postmark.t  t0022-scrub.t  t0023-rsync.t  t0024-selfhost.t  t0025-pathwalk.t  t1000-valgrind.t
t/sharness.d/: 10-sudo.sh  20-diod.sh
test/: Makefile.am  Makefile.in  README  t00  t00.exp  t01  t01-setfsuid-setgroups  t01.exp  t02  t02.exp  t03  t03.exp  t04  t04-pthreads-fcntl  t04.exp  t05  t05-mount-sanity  t05.exp  t06  t06-read-sanity  t06.exp  t07  t07-write-sanity  t07.exp  t08-option-parse  t08.exp  t09-mount-9P2000  t09.exp  t10-mount-9P2000.u  t10.exp  t11-mount-9P2000.L  t11.exp  t12-mount-9P2000.H  t12-mount-bogus  t12.exp  t13-rename-across-dirs  t14-statfs  t15-fsync  t16-stat  t16.exp  (+35 more)
testkern/: Makefile.am  Makefile.in  README  kconjoin.c  runtest  t05  t05.exp  t06  t06.exp  t07  t07.exp  t13  t13.exp  t14  t14.exp  t15  t15.exp  t16  t16.exp  t17  t17.exp  t18  t18.exp  t19  t19.exp  t20  t21  t21.exp  t22  t22.exp  t23  t23.exp  t24  t24.exp  t25  t25.exp  t26  t26.exp  tfcntl2.c  tstatfs.c
tests/kern/: Makefile.am  Makefile.in  README  kconjoin.c  pathwalk.c  postmark.c  runtest  t00  t05  t06.exp  t07  t07.exp  t12  t12.exp  t13  t13.exp  t14  t14.exp  t15.exp  t16.exp  t17.exp  t18  t18.exp  t20  t20.exp  t22.exp  t23.exp  t24.exp  t25.exp  t26  t27  t27.exp  t28  t28.exp  t29  t29.exp  t30  t30.exp  t31  t31.exp  (+48 more)
tests/misc/: Makefile.am  Makefile.in  README  memcheck  t00  t00.exp  t01  t01.exp  t02  t02.exp  t03  t03.exp  t04  t04.exp  t05  t05.exp  t06  t06.conf  t06.exp  t07  t07.exp  t08  t08.conf  t09  t10  t10.exp  t11  t11.exp  t12  t12.exp  t13  t13.exp  t14  t14.exp  t15  tcap.c  tcmalloc.supp  tconf.c  test.h  tfcntl.c  (+16 more)
tests/user/: Makefile.am  Makefile.in  README  conjoin.c  runtest  t01  t01.exp  t02.exp  t03  t03.exp  t04  t04.exp  t06  t06.exp  t07  t07.exp  t08.exp  t09  t09.exp  t10  t10.exp  (+34 more)
utils/: Makefile.am  Makefile.in  ctl.c  ctl.h  diodcat  diodcat.8.in  diodcat.c  dioddate.8.in  dioddate.c  diodexp.8.in  diodexp.c  diodload.8.in  diodload.c  diodls.8.in  diodls.c  diodmount.8.in  diodmount.c  diodshowmount.8.in  diodshowmount.c  dtop.8.in  dtop.c  opt.c  opt.h  sample.c  sample.h  util.c  util.h
(+234 files in other folders)
