man5_MANS = \
	9p-attach.5 \
	9p-clunk.5 \
	9p-error.5 \
	9p-flush.5 \
	9p-intro.5 \
	9p-open.5 \
	9p-read.5 \
	9p-rename.5 \
	9p-remove.5 \
	9p-stat.5 \
	9p-statfs.5 \
	9p-version.5 \
	9p-walk.5 \
	9p-lopen.5 \
	9p-lcreate.5 \
	9p-getattr.5 \
	9p-readdir.5 \
	9p-symlink.5 \
	9p-mknod.5 \
	9p-readlink.5 \
	9p-setattr.5 \
	9p-fsync.5 \
	9p-mkdir.5 \
	9p-link.5 \
	9p-getlock.5 \
	9p-lock.5 \
	diodctl.conf.5

EXTRA_DIST = $(man8_MANS) $(man5_MANS)
